--- a/src/App.css
+++ b/src/App.css
@@ -5,63 +5,28 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-  font-family: Serif
+  font-family: 'Lato', sans-serif;
+  font-family: 'PT Sans', sans-serif
 }
 
-
-/*.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-} */
-
-/* @keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
-
-/* @media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-} */
 
 .header {
   height: 100px;
   display: grid;
-  grid-template-columns: 50% 2fr 1fr
+  grid-template-columns: 45% 2fr 1fr
 
 
 }
 
 .header button {
   height: 30px;
-  padding: 10px;
   font-family: Serif;
-  font-size: 18px
+  font-size: 18px;
+  border-radius: 4px;
+  font-family: 'Lato', sans-serif;
+  font-family: 'PT Sans', sans-serif;
 
 }
-
-
 
 .topnav * {
   padding: 10px;
@@ -72,8 +37,9 @@
 
 #add-new-form * {
   padding: 3px;
-  margin: 8px;
-  font-size: 15px,
+  margin: 10px;
+  font-size: 15px;
+  border-radius: 3px
   
 }
 
@@ -91,8 +57,10 @@
 .main-page {
   display: grid;
   gap: 3rem;
-  grid-template-columns: 15% 65% 1fr
+  grid-template-columns: 18% 70% 
 }
+
+
 
 /* .main-page * {
   border: solid;
@@ -114,28 +82,44 @@
 } */
 
 .shoeblock img {
-  width: 100%;
+  width: 90%;
+  float: left;
   border-radius: 4px;
 }
 
 .shoedetails {
-  display: flex;
-  justify-content: space-around;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: 8fr 1fr;
+  gap: 15px;
+  place-items: center;
   height: 50%;
-  border: solid;
+  font-family: 'Lato', sans-serif;
+  font-family: 'PT Sans', sans-serif;
+  /* border: solid;
   border-color: red;
-  border-width: 2px
+  border-width: 2px */
 }
 
 .shoedetails * {
-  border: solid;
+  /* border: solid;
   border-color: red;
-  border-width: 2px
+  border-width: 2px; */
+  font-family: 'Lato', sans-serif;
+  font-family: 'PT Sans', sans-serif;
+}
+
+#complete-details * {
+  list-style-type: none;
+  text-align: right
+
 }
 
 .shoedetails img {
   height: 400px;
-  border-radius: 6px
+  border-radius: 18px;
+  max-width: 90%;
+  padding: 10px;
 }
 
 @media (max-width: 60em) {
@@ -143,6 +127,32 @@
     display: none
   }
 }
+
+/* #add-run-form {
+  grid-column-start: span 2;
+} */
+
+.add-new-run {
+  font-size: 20px;
+  padding: 3px;
+  margin: 5px;
+  border-radius: 4px
+
+}
+
+.add-new-run * {
+  font-size: 20px;
+  padding: 3px;
+  margin: 5px;
+  border-radius: 4px
+
+}
+
+#add-new-run-button {
+  float: right
+}
+
+
 
 
 
