--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 
 
 #root {
-  max-width: 1280px;
+  /* max-width: 1280px; */
   margin: 0 auto;
-  padding: 2rem;
+  padding-top: 2rem;
   text-align: center;
   font-family: 'Lato', sans-serif;
   font-family: 'PT Sans', sans-serif
@@ -57,7 +57,8 @@
 .main-page {
   display: grid;
   gap: 3rem;
-  grid-template-columns: 18% 70% 
+  grid-template-columns: 15% 70%;
+  padding-left: 2em
 }
 
 
@@ -92,7 +93,6 @@
   grid-template-columns: 1fr 2fr;
   grid-template-rows: 8fr 1fr;
   gap: 15px;
-  place-items: center;
   height: 50%;
   font-family: 'Lato', sans-serif;
   font-family: 'PT Sans', sans-serif;
@@ -120,6 +120,7 @@
   border-radius: 18px;
   max-width: 90%;
   padding: 10px;
+  float: le
 }
 
 @media (max-width: 60em) {
@@ -150,6 +151,60 @@
 
 #add-new-run-button {
   float: right
+}
+
+
+#analytics-div {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 150px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  background-image: url(https://www.bolderboulder.com/wp-content/uploads/2023/05/UPDATEDBB_Web_Gallery_Start1.jpg);
+
+
+}
+
+@media (max-width: 60em) {
+  #analytics-div {
+    margin-left: 100px;
+
+  }
+}
+
+#pie-chart {
+  display: grid;
+  max-width: 600px;
+  align-items: center;
+  margin-left: 150px;
+
+  
+}
+
+#pie-chart * {
+  width: 100%;
+  
+}
+
+#mileage-percentages-div {
+  border: none;
+  border-radius: 6px;
+  background: white;
+  padding: 15px;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  max-width: 200px;
+  min-width: 200px;
+
+  /* filter: drop-shadow(0 0 1px) */
+
+}
+
+@media (max-width: 60em) {
+  #mileage-percentages-div {
+    display: none
+  }
 }
 
 
