--- a/src/App.css
+++ b/src/App.css
@@ -36,9 +36,9 @@
   margin: 0
 }
 
-@media (max-width: 1400px) {
+@media (max-width: 1600px) {
   #shoetracker-logo {
-    margin-left: 20px;
+    margin-left: 30px;
     margin-right: 20px
     }
 }
@@ -121,22 +121,17 @@
 
 
 #sidebar {
-  display: grid;
-  /* gap: 10px; */
-  grid-template-rows: repeat(5, 1fr);
   padding-top: 50px;
 
 }
 
-/* .shoeblock {
-  margin-left: 20px
-} */
 
-.shoeblock * {
+.shoeblock {
   width: 60%;
   min-width: 150px;
   float: left;
-  border-radius: 4px;
+  border-radius: 25px;
+  padding: 15px
 }
 
 .shoedetails {
@@ -194,7 +189,19 @@
 @media (max-width: 60em) {
   .shoedetails img {
     max-width: 45%;
+  }
+}
 
+#deletebutton {
+  background: #bb1e10;
+  color: white;
+  border-radius: 3px;
+  border: none
+}
+
+@media (max-width: 60em) {
+  #deletebutton {
+    display: none
   }
 }
 
