--- a/src/App.css
+++ b/src/App.css
@@ -207,7 +207,20 @@
 
 #notes-and-add-run {
   text-align: left;
-  
+}
+
+#add-note-input {
+  background: rgba(0,0,0,0);
+  color: white;
+  border: none;
+  border-radius: 4px;
+  width: 100%
+
+}
+
+#add-note-input::placeholder {
+  color: white;
+  font-size: 15px
 }
 
 
