--- a/src/App.css
+++ b/src/App.css
@@ -320,38 +320,31 @@
   padding: 20px;
   border-radius: 15px;
   background: rgba(0,0,0,.3);
+  color: white;
+  line-height: 1.6
+
 
 
 }
 
 #details-box-piechart {
   text-align: left;
-  margin-bottom: 20px
 }
 
 #details-box-barchart {
   text-align: right;
-  margin-top: 20px;
   
 }
 
 .resources-list * {
   text-decoration: none;
-  color: white
+  color: white;
 }
 
 
-#pie-chart {
-  display: grid;
-  /* max-width: 600px; */
-  align-items: center;
-  
-}
 
 #pie-chart * {
-  /* width: 100%;   */
-  filter: drop-shadow(0 1px 2px #3a3b3c)
-
+  width: 100%;  
 }
 
 #mileage-percentages-div {
@@ -369,7 +362,7 @@
 
 }
 
-@media (max-width: 60em) {
+@media (max-width: 1300px) {
   #mileage-percentages-div {
     display: none
   }
@@ -391,11 +384,7 @@
 }
 
 #barchart {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  padding: 30px;
+  margin-left:10px
 }
 
 #spacer2 {
