--- a/src/App.css
+++ b/src/App.css
@@ -10,10 +10,8 @@
 
 .header {
   height: 140px;
-  /* padding-top: 2rem; */
-  /* padding-bottom: 2rem; */
   display: grid;
-  grid-template-columns: 42% 2fr 1fr;
+  grid-template-columns: 42% 2.5fr 1fr;
   padding-right: 3em;
   background:#556b2f;
   color: white;
@@ -48,6 +46,7 @@
 
 .topnav {
   display: flex;
+  justify-content: center;
   margin-bottom: 60px
 }
 
@@ -59,12 +58,12 @@
 
 .topnav * {
   padding: 15px;
-  font-size: 20px;
+  font-size: 22px;
   color: white;
   text-decoration: none; 
   font-weight: 500;
-  flex-wrap: wrap;
   transition: all 4s ease;
+  
 }
 
 .topnav *:hover {
@@ -231,6 +230,15 @@
   width: 250px
 }
 
+#delete-note {
+  background: red;
+  color: white;
+  border: none;
+  height: 15px;
+  font-size: 10px
+
+}
+
 #add-note-input {
   background: rgba(0,0,0,0);
   color: white;
@@ -250,12 +258,7 @@
 }
 
 #add-note-button {
-  background: #556b2f;
-  color: white;
-  border: none;
-  border-radius: 4px;
-  margin-left: 2px;
-  
+  display: none
 }
 
 
@@ -325,9 +328,15 @@
   color: white;
   line-height: 1.6;
 
+}
 
-
-
+.details-box-header {
+  color: white;
+  font-size: 15px;
+  font-weight: 600;
+  background: #001f3f;
+  border-radius: 2px;
+  padding: 2px
 }
 
 #details-box-piechart {
@@ -392,7 +401,8 @@
 }
 
 #barchart {
-  margin-left:10px;
+  margin-left: 10px;
+  margin-top: 20px
 }
 
 #barchart * {
@@ -400,9 +410,120 @@
 }
 
 #spacer2 {
-  height: 300px;
+  height: 100px;
   background: #001f3f;
 }
+
+#fun-stuff-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 75px;
+  background-image: url("./boulderrunning.jpg");
+  background-attachment: fixed
+}
+
+#fun-stuff-header {
+  display: grid;
+  grid-template-columns: 1fr 1fr 60%;
+  /* grid-template-rows: 2fr 1fr; */
+  align-items: center;
+  background: #001f3f;
+  color: white;
+  text-align: right;
+  padding-right: 50px;
+  font-weight: 200;
+  font-size: 22px;  
+}
+
+#fun-stuff-header button {
+  width: 150px;
+  border-radius: 3px;
+  background: #e75480;
+  color: white;
+  height: 40px;
+  border: none;
+  margin-left: 40px
+}
+
+.fun-stuff-form {
+  display: flex;
+  grid-column-end: span 4
+
+}
+
+.fun-stuff-form * {
+  justify-content: flex-end;
+  align-items: flex-end;
+  border: none;
+  border-radius: 4px;
+  margin: 8px
+}
+
+#races-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  flex-wrap: wrap;
+  height: 800px;
+  background: rgba(0,0,0,.3);
+  color: white;
+  border-radius: 20px;
+  margin-right: 30px;
+  margin-top: 30px;
+
+}
+
+#running-gear-container {
+  display: flex;
+  flex-direction: column;
+  margin-left: 30px;
+  margin-top: 30px;
+  background: rgba(0,0,0,.3);
+  color:white;
+  border-radius: 20px;
+  height: 800px;
+  justify-content: start
+}
+
+#race-card-container {
+  border: none;
+  border-radius: 5px;
+  width: 40%;
+  padding-bottom: 10px;
+  padding-right: 20px;
+  padding-left: 20px;
+  margin: 15px;
+  line-height: 1.2;
+  background: #556b2f;
+  color: white
+
+}
+
+#gear-card-container {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  border: none;
+  border-radius: 5px;
+  width: 70%;
+  height: 120px;
+  padding: 10px;
+  margin: 15px;
+  line-height: 1.2;
+  font-size: 14px;
+  align-items: center;
+  background: #556b2f;
+  color: white
+}
+
+#gear-card-container img {
+  max-height: 100px;
+  border-radius: 3px;
+  margin-left: 20px
+  
+}
+
+
 
 
 
