--- a/src/App.css
+++ b/src/App.css
@@ -230,15 +230,6 @@
   width: 250px
 }
 
-#delete-note {
-  background: red;
-  color: white;
-  border: none;
-  height: 15px;
-  font-size: 10px
-
-}
-
 #add-note-input {
   background: rgba(0,0,0,0);
   color: white;
@@ -284,6 +275,11 @@
   border: none;
   background: #e75480;
   color: white 
+}
+
+#add-new-run-submit-button {
+  margin: 3px;
+  float: left
 }
 
 #bolderboulderspacer {
@@ -494,18 +490,22 @@
   padding-right: 20px;
   padding-left: 20px;
   margin: 15px;
-  line-height: 1.2;
+  line-height: 1.1;
   background: #556b2f;
-  color: white
+  color: white;
+  display: grid;
+  grid-template-columns: 7fr 1fr;
+  text-align: left
+ 
 
 }
 
 #gear-card-container {
   display: grid;
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: .25fr 1fr 2fr;
   border: none;
   border-radius: 5px;
-  width: 70%;
+  width: 80%;
   height: 120px;
   padding: 10px;
   margin: 15px;
@@ -523,6 +523,24 @@
   
 }
 
+.delete-fun-stuff {
+  background: #bb1e10;
+  color: white;
+  border-radius: 4px;
+  border: none;
+  width: 25px;
+  height: 25px
+}
+
+#delete-gear {
+  
+
+}
+
+#delete-race {
+  align-self: center
+
+}
 
 
 
